--- a/css/aboutCSS.css
+++ b/css/aboutCSS.css
@@ -1,4 +1,3 @@
-
 html { 
   background: url(background.jpg)no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -6,6 +5,7 @@ html {
   -o-background-size: cover;
   background-size: cover;
 }
+body {margin:0;}
 .navbar {
   overflow: hidden;
   background-color: #333;
@@ -54,15 +54,7 @@ h2{
 	font-size: 20px;
 	color: #000066;
 }
-body{
-    font-family: 'Raleway', sans-serif;
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
-}
 .all{
     display: flex;
     perspective: 10px;
