--- a/css/cssCV.css
+++ b/css/cssCV.css
@@ -24,7 +24,7 @@ body {margin:0;}
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 1.5vw;
 }
 .navbar i {
 	float: left;
@@ -33,7 +33,7 @@ body {margin:0;}
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 1.5vw;
 }
 .navbar a:hover {
   background: #ddd;
@@ -49,6 +49,8 @@ body {margin:0;}
 	display: block;
 	float: left;
 	margin-left: 2%;
+	font-size: 3.5vw;
+	padding: 2%;
 }
 .info{
 	display: block;
@@ -62,6 +64,7 @@ body {margin:0;}
 	text-align: center;
 	font-weight: bold;
 	font-family: Verdana;
+	font-size: 1.5vw;
 }
 .center {
     margin: auto;
@@ -77,7 +80,7 @@ body {margin:0;}
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 	font-family: "Times New Roman";
-	font-size: 50px;
+	font-size: 3vw;
 	font-weight: bold;
 	color: white;
 }
@@ -89,7 +92,7 @@ body {margin:0;}
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 2vw;
     margin: 4px 2px;
     -webkit-transition-duration: 0.4s; 
     transition-duration: 0.4s;
@@ -114,8 +117,8 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-	height: 50%;
-    width: 50%;
+	height: 60%;
+    width: 60%;
 	border-radius: 50%;
 
     margin-top: 25px;
