--- a/css/cssCV.css
+++ b/css/cssCV.css
@@ -163,11 +163,6 @@ img {
     to   { opacity: 1; }
 }
 @media only screen and (max-width:1024px) {
-html { 
- background: url(background.jpg)no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
+html, body, .navbar, .main, .links, .info, .center, .button, img  { 
+ width: 100%;
 }
