--- a/css/cssCV.css
+++ b/css/cssCV.css
@@ -162,7 +162,8 @@ img {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
-@media only screen and (max-width:1024px) {
+@media only screen and (max-width:1024px, max-height: 960px) {
 html, body, .navbar, .main, .links, .info, .center, .button, img  { 
  width: 100%;
+ height: 100%;
 }
