--- a/css/aboutCSS.css
+++ b/css/aboutCSS.css
@@ -9,7 +9,7 @@ body {margin:0;}
 .navbar {
   overflow: hidden;
   background-color: #333;
-  position: fixed;
+  position: relative;
   top: 0;
   width: 100%;
 }
