--- a/css/projects.css
+++ b/css/projects.css
@@ -13,7 +13,7 @@ display: block;
 .navbar {
   overflow: hidden;
   background-color: #333;
-  position: fixed;
+  position: relative;
   top: 0;
   width: 100%;
 }
