--- a/css/projects.css
+++ b/css/projects.css
@@ -4,11 +4,12 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-
+	
 }
 body {
 margin:0;
 display: block;
+overflow: hidden;
 }
 .navbar {
   overflow: hidden;
@@ -84,7 +85,7 @@ img{
 
 .text {
   color: white;
-  font-size: 1.5vw;
+  font-size: 13px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -95,7 +96,7 @@ img{
 }
 h2{
 	color: orange;
-	font-size: 1.5vw;
+	font-size: 10px;
 	text-align: left;
 	font-family: Verdana;
 }
