--- a/css/projects.css
+++ b/css/projects.css
@@ -85,7 +85,7 @@ img{
 
 .text {
   color: white;
-  font-size: 150px;
+  font-size: 1.5vw;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -96,7 +96,7 @@ img{
 }
 h2{
 	color: orange;
-	font-size: 100px;
+	font-size: 1vw;
 	text-align: left;
 	font-family: Verdana;
 }
