--- a/css/aboutCSS.css
+++ b/css/aboutCSS.css
@@ -11,7 +11,7 @@ body {
 .navbar {
   overflow: hidden;
   background-color: #333;
-  position: relative;
+  position: fixed;
   top: 0;
   width: 100%;
 }
