--- a/css/aboutCSS.css
+++ b/css/aboutCSS.css
@@ -5,11 +5,13 @@ html {
   -o-background-size: cover;
   background-size: cover;
 }
-
+body {
+	margin:5% ;
+}
 .navbar {
   overflow: hidden;
   background-color: #333;
-  position: fixed;
+  position: relative;
   top: 0;
   width: 100%;
 }
