--- a/css/aboutCSS.css
+++ b/css/aboutCSS.css
@@ -11,12 +11,14 @@ body {
 .navbar {
   overflow: hidden;
   background-color: #333;
-  position: fixed;
+  position: relative;
   top: 0;
   width: 100%;
+  font-size: 18px;
 }
 .navbar-left{
 	float: left;
+
 }
 .navbar a {
   float: right;
@@ -25,18 +27,26 @@ body {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
 }
-
+.navbar i {
+	float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
 .navbar a:hover {
   background: #ddd;
   color: black;
 }
 
 .main {
-  padding: 2%;
-  margin-top: 5%;
-  height: 100%; 
+  padding: 20px;
+  margin-top: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
+  height: 100%;
   text-align: center;
 }
 .aboutMe{
