--- a/css/cssCV.css
+++ b/css/cssCV.css
@@ -1,11 +1,11 @@
 html { 
- background: url(background.jpg)no-repeat center center fixed; 
+  background: url(background.jpg)no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
-body {margin:0;}
+
 
 .navbar {
   overflow: hidden;
@@ -41,9 +41,11 @@ body {margin:0;}
 }
 
 .main {
-  padding: 1%;
-  margin-top: 5%;
-  height: 100%; 
+  padding: 20px;
+  margin-top: 50px;
+  margin-left: 30px;
+  margin-right: 30px;
+  height: 100%;
 }
 .links {
 	display: block;
@@ -119,7 +121,7 @@ body {margin:0;}
 	color: white;
 }
 .button {
-    background-color: #006699; 
+    background-color: #006699;
     border: none;
     color: white;
     padding: 2% 5%;
@@ -128,17 +130,17 @@ body {margin:0;}
     display: inline-block;
     font-size: 2vw;
     margin: 2% 1%;
-    -webkit-transition-duration: 0.4s; 
+    -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
     cursor: pointer;
 	border-radius: 12px;
 	font-weight: bold;
-	
+
 }
 
 .button1 {
-    background-color: white; 
-    color: #006699; 
+    background-color: white;
+    color: #006699;
     border: 2px solid #006699;
 }
 
@@ -160,9 +162,9 @@ img {
     text-align: center;
 
     -webkit-animation: fadein 5s;
-       -moz-animation: fadein 5s; 
+       -moz-animation: fadein 5s;
         -ms-animation: fadein 5s;
-         -o-animation: fadein 5s; 
+         -o-animation: fadein 5s;
             animation: fadein 5s;
 
 }
